Frontend portion of assigning devs to tickets complete
When viewing a ticket you now have an option to assign a dev which redirects you to dev controller and the assign view which is passed the ticket id of the ticket the user was viewing and has an open input space for the assignees name.
Now just need to explore more user friendly options of autofilling or having a drop down menu for selecting a dev to be assigned to a specific ticket

--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -42,7 +42,16 @@
         </dd>
     </dl>
 </div>
+<form asp-controller="Devs" asp-action="Assign">
+<div class="form-group">
+    <label for="TicketID" class="control-label"></label>
+    <input type="hidden" name="TicketID" value="@Model.Id" class="form-control" readonly/>
+</div>
+<div class="form-group">
+    <input type="submit" value="Assign a dev" class="btn btn-primary" />
+</div>
+</form>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Tickets</a>
 </div>
