--- a/Views/Devs/Assign.cshtml
+++ b/Views/Devs/Assign.cshtml
@@ -1,36 +1,37 @@
-﻿@model BugTracker.Models.Dev
+﻿@using Microsoft.AspNetCore.Identity;
+@model IEnumerable<IdentityUser>
 
-@{
-    ViewBag.Title = "Assign a developer";
-}
+    @{
+        ViewBag.Title = "Assign a developer";
+    }
 
-<h4>Assign a developer</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Assign">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="DevName" class="control-label"></label>
-                <input asp-for="DevName" class="form-control" />
-                <span asp-validation-for="DevName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AssignedTicketId" class="control-label"></label>
-                <input style="background-color: lightgrey;" asp-for="AssignedTicketId" value="@ViewBag.TicketID" class="form-control" readonly/>
-                <span asp-validation-for="AssignedTicketId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>Assign a developer</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="AssignFinal">
+                <div class="form-group">
+                    <label for="DevName" class="control-label"></label>
+                    <select name="DevName" class="form-control">
+                        @foreach (var user in Model)
+                        {
+                            <option value="@user.UserName">@user.UserName</option>
+                        }
+
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="AssignedTicketId" class="control-label"></label>
+                    <input style="background-color: lightgrey;" name="AssignedTicketId" value="@ViewBag.TicketID" class="form-control" readonly />
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Assign" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to Tickets</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to Tickets</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
