--- a/Views/Devs/Assign.cshtml
+++ b/Views/Devs/Assign.cshtml
@@ -32,6 +32,6 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to Tickets</a>
+        <a asp-controller="Tickets" asp-action="Index"> Cancel </a>
     </div>
 
