Users can now view their own assigned tickets
+ You can now view all assigned developers to a specific ticket
-Need to still produce functionality of saving closed tickets 
-Need to add some [Authorize] calls throughout project so users must be logged in to access most of app

--- a/Views/Devs/Delete.cshtml
+++ b/Views/Devs/Delete.cshtml
@@ -22,6 +22,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="DevId" />
         <input type="submit" value="Unassign" class="btn btn-danger" /> |
-        <a asp-action="ViewAssignedDevs">Back to List</a>
+        <a asp-action="ViewAssignedDevs">Back to Ticket Assignments</a>
     </form>
 </div>
