--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tickets" asp-action="Index">Tickets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Devs" asp-action="ViewAssignedDevs">Ticket Assignments</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Devs" asp-action="ViewAssignedDevs">All Ticket Assignments</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Devs" asp-action="MyTickets">My Ticket Assignments</a>
                         </li>
                     </ul>
                 </div>
