--- a/Views/Devs/ViewSpecificAssignments.cshtml
+++ b/Views/Devs/ViewSpecificAssignments.cshtml
@@ -13,7 +13,7 @@
                 Name
             </th>
             <th>
-                This Ticket ID:
+                Selected Ticket ID:
             </th>
             <th>
 
