--- a/Views/Tickets/Delete.cshtml
+++ b/Views/Tickets/Delete.cshtml
@@ -41,10 +41,12 @@
             @Html.DisplayFor(model => model.UsersName)
         </dd>
     </dl>
-    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Close" class="btn btn-danger" /> |
         <a asp-action="Index">Back to Tickets</a>
     </form>
+
+
+
 </div>
