--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TicketDate" class="control-label"></label>
-                <input style="background-color: lightgrey;" asp-for="TicketDate" value="@thisDay.ToString("d");" class="form-control" readonly />
+                <input style="background-color: lightgrey;" asp-for="TicketDate" value="@thisDay.ToString("d")" class="form-control" readonly />
                 <span asp-validation-for="TicketDate" class="text-danger"></span>
             </div>
             <div class="form-group">
