--- a/Views/Tickets/ShowSearchForm.cshtml
+++ b/Views/Tickets/ShowSearchForm.cshtml
@@ -1,4 +1,5 @@
 ﻿<h4>Search for a Ticket</h4>
+<!-- AS OF RIGHT NOW THIS PAGE IS OBSOLETE AND NOT USED -->
 <hr />
 <div class="row">
     <div class="col-md-4">
