--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>All Tickets</h1>
+<h1>Open Tickets</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
