--- a/Views/ResolvedTickets/Index.cshtml
+++ b/Views/ResolvedTickets/Index.cshtml
@@ -35,8 +35,7 @@
                 @Html.DisplayFor(modelItem => item.RUsersName)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
             </td>
         </tr>
 }
