Bug fix + minor UI improvement
-Fixed bug dealing with method execution times interfering with one another + altered a few links to clean up UI for assigning developers

--- a/Views/Devs/AssignFinal.cshtml
+++ b/Views/Devs/AssignFinal.cshtml
@@ -1,4 +1,4 @@
 ﻿<h1> Developer Assigned successfully!</h1>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ViewAssignedDevs">View all assignments</a>
 </div>
