--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">BugTracker App</h1>
+    <p>- Marc McCombe -</p>
 </div>
 
 <div id="piechart" style="float: left; width:49.5%"></div>
@@ -31,7 +31,7 @@
 
         // Optional; add a title and set the width and height of the chart
         var options = {
-            'title': 'Priorities of All Tickets', 'width': 550, 'height': 400, legend: { position: 'none' }, fontSize: 16  };
+            'title': 'Priorities of All Created Tickets', 'width': 550, 'height': 400, legend: { position: 'none' }, fontSize: 16  };
 
         // Display the chart inside the <div> element with id="piechart"
         var chart = new google.visualization.BarChart(document.getElementById('barchart'));
